update build script to handle scalib

--- a/.recipe/prod/meta.yaml
+++ b/.recipe/prod/meta.yaml
@@ -36,6 +36,7 @@ test:
     - pytest-cov
     - pytest-mock
     - pycryptodome
+    - scalib  # [not (aarch64 or arm64)]
   commands:
     - pytest
 
