Resolve "[feature] Integrate SCALib SNR"

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,13 @@ test = [
     "pytest-cov",
     "pytest-mock",
 ]
+test-scalib = [
+    "pycryptodome",
+    "pytest",
+    "pytest-cov",
+    "pytest-mock",
+    "scalib",
+]
 
 [project.urls]
 Homepage = "https://www.eshard.com"
@@ -67,6 +74,8 @@ addopts = [
 ]
 markers = [
     "serial: execute test serially (to avoid race conditions)",
+    "end_to_end: mark test as end-to-end test",
+    "scalib: tests requiring SCALib library (automatically skipped on ARM)",
 ]
 
 [tool.flake8]
