skip scalib tests for arm

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,4 @@
 testpaths = tests
 markers =
     end_to_end: mark a test as an end-to-end test
+    scalib: tests requiring SCALib (automatically skipped on ARM or when SCALib is not installed)
