--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -119,6 +119,7 @@ build:pypi:wheel:
   stage: build
   script:
     - conda activate
+    - git remote set-url origin "https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.com/${CI_PROJECT_PATH}.git"
     - git fetch --tags
     - pip install -U pip setuptools setuptools-scm wheel
     - python setup.py bdist_wheel
